--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,3 +1,13 @@
-.header {
+header.banner {
+  padding: 15px;
 
+  .banner-container {
+    display: flex;
+
+    img.header-logo {
+      max-width: 250px;
+      height: auto;
+      align-self: center;
+    }
+  }
 }
