--- a/dev/scss/partials/_global.scss
+++ b/dev/scss/partials/_global.scss
@@ -85,3 +85,12 @@ ul.nav {
     padding: ($section-padding + 15px) 0;
   }
 }
+
+.note {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 70px;
+  display: flex;
+  justify-content: center;
+}
