--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -19,7 +19,7 @@
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
   {{ '//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js' | script_tag }}
   <script>jQuery('html').removeClass('no-js').addClass('js');</script>
-  {{ 'theme.js' | asset_url | script_tag }}
+  {{ 'theme.min.js' | asset_url | script_tag }}
 
   {%- if settings.favicon != blank -%}
     <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
